Fix scroll on mobile

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -1,6 +1,8 @@
 .app__main {
   padding-top: $topbar-height;
   width: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
 
   @include media-query-lg-up {
     flex: 1 1 100%;
